@@ -56,6 +56,9 @@ set armelftests {
     {"target2-rel" "-static --target2=rel -T arm.ld" "" {arm-target2.s}
      {{objdump -s arm-target2-rel.d}}
      "arm-target2-rel"}
+    {"target2-abs" "-static --target2=abs -T arm.ld" "" {arm-target2.s}
+     {{objdump -s arm-target2-abs.d}}
+     "arm-target2-abs"}
     {"target2-got-rel" "-static --target2=got-rel -T arm.ld" "" {arm-target2.s}
      {{objdump -s arm-target2-got-rel.d}}
      "arm-target2-got-rel"}
