@@ -1,0 +1,5 @@
+
+.*:     file format.*
+
+Contents of section .text:
+ 8000 (04800000|00008004) .*
