@@ -1,3 +1,8 @@
+2004-09-30  Paul Brook  <paul@codesourcery.com>
+
+	* ld.texinfo: Document --target2=abs.
+	* emulparms/armsymbian.sh (TARGET2_TYPE): Set.
+
 2004-09-29  Nick Clifton  <nickc@redhat.com>
 
 	* scripttempl/xstormy16.sc: Only perform the assignments to the
