@@ -1,3 +1,8 @@
+2004-09-30  Paul Brook  <paul@codesourcery.com>
+
+	* elf32-arm.h (bfd_elf32_arm_set_target_relocs): Handle "abs"
+	target2 relocation type.
+
 2004-09-30  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR 414
